--- a/Backend/nginx/conf.d/default.conf
+++ b/Backend/nginx/conf.d/default.conf
@@ -2,30 +2,21 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html/public;
-    index index.php;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Enable CORS for frontend (React)
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+    root /var/www/html;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # Handle preflight OPTIONS requests
-    if ($request_method = OPTIONS) {
-        return 204;
-    }
-
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass 127.0.0.1:9000;
-        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_index index.php;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
