--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,10 +1,14 @@
-FROM node:20
+FROM node:22-slim
 
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-RUN npm run build
 
-EXPOSE 80
-CMD ["npx", "serve", "-s", "build", "-l", "80"]
+# Install dependencies first (for caching)
+COPY package*.json ./
+RUN npm install -g npm@latest
+RUN npm install
+
+# Copy rest of the app
+COPY . .
+
+EXPOSE 5173
+CMD ["npm", "run", "dev", "--", "--host"]
