--- a/Backend/nginx/conf.d/default.conf
+++ b/Backend/nginx/conf.d/default.conf
@@ -2,20 +2,25 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/html;
-    index index.php index.html;
+    root /usr/share/nginx/html;   # Frontend build
+    index index.html;
 
+    # Proxy API requests to backend container
+    location /api/ {
+        proxy_pass http://ignitebox_backend:80/;  # Backend container inside Docker network
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+    }
+
+    # Serve frontend files
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri /index.html;
     }
 
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_index index.php;
-    }
-
+    # Deny hidden files
     location ~ /\.ht {
         deny all;
     }
