--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.9'
 
 services:
   db:
@@ -41,7 +42,7 @@ services:
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     expose:
-      - "9000"
+      - "80"        # Backend serves HTTP (PHP built-in or FPM via port 80)
     depends_on:
       - db
       - memcached
@@ -55,9 +56,8 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./Backend/src:/var/www/html
+      - ./Frontend/dist:/usr/share/nginx/html   # Serve frontend build
       - ./Backend/nginx/conf.d:/etc/nginx/conf.d
-      - ./Backend/php.ini:/usr/local/etc/php/php.ini
     depends_on:
       - backend
     networks:
@@ -77,7 +77,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - WATCHPACK_POLLING=true
-      - VITE_API_URL=http://localhost:8080
+      - VITE_API_URL=http://ignitebox_backend:80   # Calls backend directly
     command: ["npm", "run", "dev", "--", "--host"]
     depends_on:
       - backend
